fixed z-index on header

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -2,6 +2,8 @@
 
 .header {
   @include flex-config($justify: space-between, $align: center);
+  position: relative;
+  z-index: 1000;
   min-height: 10vh;
   background-color: var(--clr-nav);
   transition: background-color 0.8s;
